just playing around

--- a/AngularDotNetCoreNagios/ClientApp/angular.json
+++ b/AngularDotNetCoreNagios/ClientApp/angular.json
@@ -49,6 +49,11 @@
                 "glob": "commands.json",
                 "input": "./",
                 "output": "./assets/"
+              },
+              {
+                "glob": "contactList.json",
+                "input": "./",
+                "output": "./assets/"
               }
             ],
             "styles": [
