--- a/AngularDotNetCoreNagios/wwwroot/Templates/hostTemplate.cfg
+++ b/AngularDotNetCoreNagios/wwwroot/Templates/hostTemplate.cfg
@@ -1,6 +1,6 @@
 ###############################################################################
 #
-# HOST DEFINITION
+# HOST DEFINITION FOR $HOST
 #
 ###############################################################################
 
@@ -12,7 +12,7 @@ define host {
                                                     ; This host definition will inherit all variables that are defin$
                                                     ; in (or inherited by) the linux-server host template definition.
     host_name               $HOST
-    alias                   $HOST
+    alias                   $ALIAS
     address                 $IPADDRESS
 }
 
