--- a/AngularDotNetCoreNagios/AngularDotNetCoreNagios.csproj
+++ b/AngularDotNetCoreNagios/AngularDotNetCoreNagios.csproj
@@ -1,24 +1,54 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <TypeScriptToolsVersion>3.1</TypeScriptToolsVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ClientApp\src\app\components\contact-groups\**" />
+    <Content Remove="ClientApp\src\app\components\contact-groups\**" />
+    <EmbeddedResource Remove="ClientApp\src\app\components\contact-groups\**" />
+    <None Remove="ClientApp\src\app\components\contact-groups\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Migrations\20181207195546_createInitial.cs" />
+    <Compile Remove="Migrations\20181207195546_createInitial.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="ClientApp\src\app\components\configuration\index.ts" />
+    <None Remove="ClientApp\src\app\components\dialogs\index.ts" />
     <None Remove="ClientApp\src\app\components\forms\index.ts" />
     <None Remove="ClientApp\src\app\core\index.ts" />
+    <None Remove="ClientApp\src\app\models\contact-cfg.ts" />
+    <None Remove="ClientApp\src\app\models\contact-group-cfg.ts" />
+    <None Remove="ClientApp\src\app\models\contact.ts" />
+    <None Remove="ClientApp\src\app\models\contactGroup.ts" />
+    <None Remove="ClientApp\src\app\models\host-cfg.ts" />
+    <None Remove="ClientApp\src\app\shared\layout\index.ts" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\components\configuration\index.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\components\dialogs\index.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\components\forms\index.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\core\index.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\contact-group-cfg.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\contact.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\contactGroup.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\contact-cfg.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\host-cfg.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\shared\layout\index.ts" />
   </ItemGroup>
 
 </Project>
