--- a/AngularDotNetCoreNagios/appsettings.json
+++ b/AngularDotNetCoreNagios/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Filename=./Data/aNagios.sqlite"
+  },
   "AllowedHosts": "*"
 }
